# wgsl-spec

./: .gitignore  Cargo.toml  README.md  x
spec/: functions.json  tokens.json
src/: gen_spec.rs  lib.rs  scrape.rs
upstream/: WGSL.html
