[package]
name = "wgsl-spec"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[example]]
name = "gen_spec"
path = "src/gen_spec.rs"

[dependencies]
scraper = { version = "0.19.0", optional = true }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = { version = "1.0.120", optional = true }

[profile.dev]
opt-level = 1

[features]
scrape = ["dep:scraper", "dep:serde_json"]
include = ["dep:serde_json"]
